--- a/assets/iconfont/iconfont.css
+++ b/assets/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3517984 */
-  src: url('iconfont.woff2?t=1657676632832') format('woff2'),
-       url('iconfont.woff?t=1657676632832') format('woff'),
-       url('iconfont.ttf?t=1657676632832') format('truetype');
+  src: url('iconfont.woff2?t=1657860277323') format('woff2'),
+       url('iconfont.woff?t=1657860277323') format('woff'),
+       url('iconfont.ttf?t=1657860277323') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icons-gitea:before {
+  content: "\eba0";
 }
 
 .icons-bilibili-fill:before {
